# fcs-order

./: .gitignore  3RD.SPOSCAR.xyz  4TH.SPOSCAR.xyz  AGENTS.md  FORCE_CONSTANTS  LICENSE  MANIFEST.in  POSCAR  POSCAR_repate  README.md  README_ZH.md  README_zh.md  SPOSCAR  SPOSCAR_1  Si2.fcp  main.py  nep.txt  phonopy_disp.yaml  pyproject.toml  setup.py  spglibpy.py  test_comparison.py  test_library_api.py  wedge3_optimization_plan.md
.github/workflows/: release.yml
anharmonic/: __init__.py  config.py
anharmonic/calculators/: __init__.py  factory.py
anharmonic/cli/: __init__.py  commands.py
anharmonic/core/: __init__.py  gaussian.py  jit_kernels.py  jit_kernels4.py  reconstruction.py  reconstruction4.py  secondorder.py  symmetry.py  utils.py  wedge.py  wedge4.py
anharmonic/io/: __init__.py  readers.py  writers.py
anharmonic/models/: __init__.py  force_constants.py  structure.py
archive/: thirdorder-v1.1.3-5b1d904.tar.bz2
art/: io.py
data/: FORCE_CONSTANTS_2ND  FORCE_CONSTANTS_3RD  POSCAR  SPOSCAR
docs/: example.py  quickstart.md
fcps/: 10.0_FORCE_CONSTANTS  300.0_FORCE_CONSTANTS  600.0_FORCE_CONSTANTS  scph_T10.0.fcp  scph_T300.0.fcp  scph_T600.0.fcp
fourthorder/: Fourthorder_core.pyx  Fourthorder_vasp.py  setup.py  symmetry.py
notc/: SymmetryOperations3.py
scph_trajs/: scph_parameters_T10.0  scph_parameters_T300.0  scph_parameters_T600.0
src/draft/: fourthorder_core.pyx
src/fcs_order/: __init__.py
src/fcsorder/: __init__.py  commands.py  fourth_order.py  second_order.py  sscha.py  third_order.py
src/fourthorder/: Fourthorder_core.c  fourthorder_reap.py  fourthorder_sow.py  fourthorder_vasp.py  fourthorder_with_calc.py  fourthorder_wrapper.py
src/mlfcs/: __init__.py  ase2dict.py  cli.py  cli_common.py  commands.py  file_io.py  io_ops.py  phonon.py  sscha.py  structure.py  utils.py
src/secondorder/: second_with_calc.py
src/thirdorder/: thirdorder_core.c  thirdorder_core.pyx  (+4 more)
thirdorder/: setup.py
thirdorderpp/: setup.py  thirdorder_common.py  thirdorder_core.pyx
(+134 files in other folders)
