[build-system]
requires = ["setuptools>=80.0.0", "wheel", "cython>=3.0.0", "numpy>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlfcs"
version = "0.1.0"
description = "Machine Learning Force Constant Suite - 计算非谐IFCs的工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.27.0",
    "numpy>=1.26.0",
    "phonopy>=2.20.0",
    "scipy>=1.10.0",
    "spglib>=2.3.0",
    "symfc>=1.6.0",
]

[project.scripts]
thirdorder = "mlfcs.thirdorder.core:main"
fourthorder = "mlfcs.fourthorder.core:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools.packages.find]
where = ["src"]


[tool.uv.sources]
mlfcs = { workspace = true }

